--- a/my-coffee-venture/src/app/module/sticky/control/select-sync-source/select-sync-source-list/select-sync-source-list.component.html
+++ b/my-coffee-venture/src/app/module/sticky/control/select-sync-source/select-sync-source-list/select-sync-source-list.component.html
@@ -1,19 +1,19 @@
-<p-dialog header="Tìm kiếm {{dialogRef.input.header | translate}}" [(visible)]="dialogRef.isDisplay" styleClass="p-dialog-md" [maximizable]="true" [baseZIndex]="10000" [style]="{width: dialogRef.input.width}" [modal]="true" appendTo="body">
+<p-dialog header="Tìm kiếm {{dialogRef.input.header }}" [(visible)]="dialogRef.isDisplay" styleClass="p-dialog-md" [maximizable]="true" [baseZIndex]="10000" [style]="{width: dialogRef.input.width}" [modal]="true" appendTo="body">
     <mat-form-field>
         <input matInput #searchInput (keyup)="initData()" [(ngModel)]="request.generalFilter" placeholder="Search ..." class="mat-form-field mat-form-field-fluid">
         <mat-hint align="start">
-            <!-- <strong>Search in {{ 'Loại hóa đơn' | translate }}</strong> -->
+            <!-- <strong>Search in {{ 'Loại hóa đơn'  }}</strong> -->
         </mat-hint>
     </mat-form-field>
     <form autocomplete="off" #form="ngForm" *ngIf="dialogRef.input.name === 'exchangeRateType'" id="search-contract">
         <div class="row">
             <div class="col-md-3 mb-3">
-                <label>{{ 'EXCHANGE_RATE_CURRENCY.TYPE' | translate }}</label>
-                <ng-select-async name="currency" bindLabel="name" placeholder="{{ 'EXCHANGE_RATE_CURRENCY.TYPE' | translate }}" [multiple]="false" [closeOnSelect]="true" [service]="exchangeRateTypeService" (change)="request.type = request.typeDto?.name" [(ngModel)]="request.typeDto">
+                <label>{{ 'EXCHANGE_RATE_CURRENCY.TYPE' }}</label>
+                <ng-select-async name="currency" bindLabel="name" placeholder="{{ 'EXCHANGE_RATE_CURRENCY.TYPE'  }}" [multiple]="false" [closeOnSelect]="true" [service]="exchangeRateTypeService" (change)="request.type = request.typeDto?.name" [(ngModel)]="request.typeDto">
                 </ng-select-async>
             </div>
             <div class="col-md-3 mb-3">
-                <label>{{ 'EXCHANGE_RATE_CURRENCY.DATE' | translate }}</label>
+                <label>{{ 'EXCHANGE_RATE_CURRENCY.DATE' }}</label>
                 <input-date name="date" [(ngModel)]="request.date">
                 </input-date>
             </div>
@@ -21,7 +21,7 @@
                 <br>
                 <button class="btn btn-sm btn-primary mt-3" (click)="initData()">
                     <i class="fal fa-file-search"></i>
-                    {{ 'COMMON.SEARCH' | translate }}</button>
+                    {{ 'COMMON.SEARCH' }}</button>
             </div>
         </div>
     </form>
@@ -29,15 +29,15 @@
         <p-table [value]="dataSource.items" selectionMode="single" [(selection)]="selectedRow" dataKey="id" tableStyleClass="table-no-wrap" [columns]="dialogRef.input.columns">
             <ng-template pTemplate="header">
                 <tr>
-                    <th *ngFor="let col of dialogRef.input.columns" [width]="col.width">{{ col.title | translate }}</th>
+                    <th *ngFor="let col of dialogRef.input.columns" [width]="col.width">{{ col.title }}</th>
                 </tr>
             </ng-template>
             <ng-template pTemplate="body" let-rowData let-columns="columns" let-rowIndex="rowIndex">
                 <tr [pSelectableRow]="rowData">
                     <td *ngFor="let col of columns; let i = index">
                         <span *ngIf="i === 0">{{ paginator.pageIndex * 10 + rowIndex + 1 }}</span>
-                        <span *ngIf="i !== 0 && !col.hasFormatDate" ngbTooltip="{{ (rowData[col.field] | label:col.dictionary)  | translate }}">{{(rowData[col.field]
-                            | label:col.dictionary) | translate}}</span>
+                        <span *ngIf="i !== 0 && !col.hasFormatDate" ngbTooltip="{{ (rowData[col.field] | label:col.dictionary)   }}">{{(rowData[col.field]
+                            | label:col.dictionary) }}</span>
                         <span *ngIf="i !== 0 && col.hasFormatDate" ngbTooltip="{{ rowData[col.field] | date: mainConfig.formatFullDate }}">{{rowData[col.field]
                             | date: mainConfig.formatFullDate}}</span>
                     </td>
@@ -50,9 +50,9 @@
         <mat-paginator [pageSize]="10" [length]="dataSource.paginatorTotal" [hidePageSize]="true" [showFirstLastButtons]="true"></mat-paginator>
     </div>
     <ng-template pTemplate="footer">
-        <button class="btn btn-sm btn-label-brand mt-3" (click)="onSelectRow()">{{ 'COMMON.SELECT' | translate
+        <button class="btn btn-sm btn-label-brand mt-3" (click)="onSelectRow()">{{ 'COMMON.SELECT'
             }}</button>
-        <button class="btn btn-sm btn-label-dark mt-3" (click)="dialogRef.hide()">{{ 'COMMON.CLOSE' | translate
+        <button class="btn btn-sm btn-label-dark mt-3" (click)="dialogRef.hide()">{{ 'COMMON.CLOSE'
             }}</button>
     </ng-template>
 </p-dialog>
