--- a/my-coffee-venture/src/app/module/sticky/crud/validate-message/validate-message.component.html
+++ b/my-coffee-venture/src/app/module/sticky/crud/validate-message/validate-message.component.html
@@ -1,5 +1,5 @@
 <span *ngIf="isShowError(form, controlName)">
     <span *ngFor="let error of getShowError(form, controlName)">
-        <small class="text-validate"> {{ ('VALIDATION.' + error?.toUpperCase()) | translate }} </small><br>
+        <small class="text-validate"> {{ ('VALIDATION.' + error?.toUpperCase()) }} </small><br>
     </span>
 </span>
