--- a/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.css
+++ b/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.css
@@ -6,6 +6,23 @@
     margin-top: 2rem;
 }
 
+.ui-multiselect-label {
+    max-width: 150px;
+    white-space: nowrap;
+}
+
+:host ::ng-deep {
+    @media screen and (max-width: 640px) {
+        .p-multiselect {
+            width: 100%;
+        }
+    }
+}
+
+p-multiSelect label {
+    max-width: 150px;
+}
+
 .bg_overlay {
     position: absolute;
     background-color: rgba(0, 0, 0, .6);
