--- a/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.html
+++ b/my-coffee-venture/src/app/view/base/base-screen/base-screen.component.html
@@ -26,15 +26,15 @@
         <div class="row">
             <div class="col-md-4" style="padding: 20px;">
                 <div class="hi">
-                    <p-card header="Every good coffee house have good reviews" subheader="" styleClass="p-card-shadow ">
+                    <p-card header="Every shop is unique, have you tried them all?" subheader="" styleClass="p-card-shadow ">
                         <ng-template pTemplate="header ">
                             <img alt="Card " src="https://images.unsplash.com/photo-1470434151738-dc5f4474c239?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb ">
                         </ng-template>
-                        <p style="height: 20vh">See our list of reviews now!
+                        <p style="height: 20vh">See our list of shops now!
                         </p>
                         <ng-template pTemplate="footer ">
                             <div>
-                                <a routerLink="/reviewer">See reviews <i class="pi pi-arrow-right transform"
+                                <a [routerLink]="['/app/shop']">See shops <i class="pi pi-arrow-right transform"
                                         style="font-size: 0.5rem"></i></a>
                             </div>
                         </ng-template>
@@ -43,7 +43,7 @@
             </div>
             <div class="col-md-4" style="padding: 20px;">
                 <div class="hi">
-                    <p-card header="Every good coffee house have good reviews" subheader="" styleClass="p-card-shadow ">
+                    <p-card header="Good coffee houses have good reviews" subheader="" styleClass="p-card-shadow ">
                         <ng-template pTemplate="header ">
                             <img alt="Card " src="https://images.unsplash.com/photo-1470434151738-dc5f4474c239?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb ">
                         </ng-template>
@@ -51,7 +51,7 @@
                         </p>
                         <ng-template pTemplate="footer ">
                             <div>
-                                <a routerLink="/reviewer">See reviews <i class="pi pi-arrow-right transform"
+                                <a [routerLink]="['/app/reviewer']">See reviews <i class="pi pi-arrow-right transform"
                                         style="font-size: 0.5rem"></i></a>
                             </div>
                         </ng-template>
@@ -60,15 +60,15 @@
             </div>
             <div class="col-md-4" style="padding: 20px;">
                 <div class="hi">
-                    <p-card header="Every good coffee house have good reviews" subheader="" styleClass="p-card-shadow ">
+                    <p-card header="Journals make coffee venture memorable" subheader="" styleClass="p-card-shadow ">
                         <ng-template pTemplate="header ">
                             <img alt="Card " src="https://images.unsplash.com/photo-1470434151738-dc5f4474c239?dpr=1&auto=format&crop=entropy&fit=crop&w=1500&h=1000&q=80&cs=tinysrgb ">
                         </ng-template>
-                        <p style="height: 20vh">See our list of reviews now!
+                        <p style="height: 20vh">Write some journals now!
                         </p>
                         <ng-template pTemplate="footer ">
                             <div>
-                                <a routerLink="/reviewer">See reviews <i class="pi pi-arrow-right transform"
+                                <a [routerLink]="['/app/reviewer']">Start writing <i class="pi pi-arrow-right transform"
                                         style="font-size: 0.5rem"></i></a>
                             </div>
                         </ng-template>
@@ -117,25 +117,36 @@
         <h2>Vertical Nav</h2>
         <p>Use the .flex-column class to create a vertical nav:</p>
         <div class="row">
-            <div class="col-lg-2" style="padding-top: 0.5rem;">
-                <ul class="nav flex-column sticky-top" style="top: 4rem;">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#">Disabled</a>
-                    </li>
-                </ul>
+            <div class="col-lg-3 col-md-4 col-xl-3" style="padding-top: 0.5rem;">
+                <div class="nav flex-column sticky-top" style="top: 4rem; width:100%">
+                    <h5>Cities</h5>
+                    <p-multiSelect [options]="cities" optionLabel="name" display="chip" optionValue="city" [(ngModel)]="shopRequest.cities" defaultLabel="Select districts" [maxSelectedLabels]="2" [style]="{'width':'250px', 'max-width':'250px'}" selectedItemsLabel="{0} items selected">
+                    </p-multiSelect><br>
+
+                    <h5>Districts</h5>
+                    <p-multiSelect [options]="districts" [(ngModel)]="shopRequest.districts" optionLabel="name" display="chip" optionValue="district" [style]="{'width':'250px', 'max-width':'250px'}" defaultLabel="Select districts" maxSelectedLabels="2" [selectedItemsLabel]="'{0} items selected'">
+                    </p-multiSelect>
+                    <br>
+                    <h5>Categories</h5>
+                    <p-multiSelect [maxSelectedLabels]="1" [options]="categories" [(ngModel)]="shopRequest.categoryIds" [style]="{'width':'250px', 'max-width':'250px'}" defaultLabel="Select a City" optionLabel="name" display="chip" optionValue="categoryId" selectedItemsLabel="{0} items selected">
+                    </p-multiSelect><br>
+                    <button type="button" pButton label="Filter" icon="pi pi-power-off" (click)="initShop()" style="margin-left:.25em"></button>
+                    <!-- <h5>Grouped</h5> -->
+                    <!-- <p-multiSelect [maxSelectedLabels]="1" [options]="groupedCities" [group]="true" [style]="{'width':'100%'}" [(ngModel)]="selectedCities4" defaultLabel="Select a City" scrollHeight="250px" display="chip">
+                        <ng-template let-group pTemplate="group">
+                            <div class="p-d-flex p-ai-center">
+
+                                <span>{{group.label}}</span>
+                            </div>
+                        </ng-template>
+                    </p-multiSelect> -->
+                </div>
+
+
             </div>
-            <div class="col-lg-9">
+            <div class="col-lg-9 col-md-8 col-xl-9">
                 <div class="row">
-                    <div class="col-md-4 col-xl-3 col-xs-6" style="padding: 20px;" *ngFor="let shop of shops">
+                    <div class="col-md-6 col-xl-4" style="padding: 20px;" *ngFor="let shop of dataSource.items">
                         <div class="hi">
                             <div class="card-deck">
                                 <div class="card">
@@ -147,13 +158,13 @@
                                         </ol>
                                         <div class="carousel-inner">
                                             <div class="carousel-item active">
-                                                <img class=" img-shop" src="assets/img/{{shop.image}}" alt="Card image cap">
+                                                <img class=" img-shop" [src]="shop.image" alt="Card image cap">
                                             </div>
                                             <div class="carousel-item">
-                                                <img class="img-shop" src="assets/img/{{shop.image}}" alt="Card image cap">
+                                                <img class="img-shop" [src]="shop.image" alt="Card image cap">
                                             </div>
                                             <div class="carousel-item">
-                                                <img class="img-shop" src="assets/img/{{shop.image}}" alt="Card image cap">
+                                                <img class="img-shop" [src]="shop.image" alt="Card image cap">
                                             </div>
                                         </div>
                                         <a class="carousel-control-prev" href="#{{shop.id}}" role="button" data-slide="prev">
@@ -229,6 +240,7 @@
                     </div> -->
                     </div>
                 </div>
+                <mat-paginator [pageSize]="10" [pageSizeOptions]="[10, 30, 50]" [length]="dataSource.paginatorTotal" [showFirstLastButtons]="true" (page)="onPageChange($event)"></mat-paginator>
             </div>
         </div>
     </div>
