--- a/my-coffee-venture/src/app/view/setting/permission/operation-and-data/operation-action-add/operation-action-add.component.html
+++ b/my-coffee-venture/src/app/view/setting/permission/operation-and-data/operation-action-add/operation-action-add.component.html
@@ -1,35 +1,20 @@
 <!-- <p-dialog [(visible)]="isDisplay" [modal]="true" [baseZIndex]="10000" appendTo="body" [style]=" {width: '70%'} "
     [draggable]="true" [maximizable]="true" [closable]="false">
     <p-header>
-        <i class="fal fa-sort-amount-up-alt"></i> {{"Add action"| translate}}
+        <i class="fal fa-sort-amount-up-alt"></i> {{"Add action"}}
     </p-header>
     
     <ng-template pTemplate="footer">
-        <button class="btn btn-primary" title="{{ ('COMMON.SAVE') | translate }}(Enter)" (click)="onBtnSave()">
-            {{ 'COMMON.SAVE' | translate }}
+        <button class="btn btn-primary" title="{{ ('COMMON.SAVE')  }}(Enter)" (click)="onBtnSave()">
+            {{ 'COMMON.SAVE'  }}
         </button>
-        <button class="btn btn-secondary" title="{{ 'COMMON.CANCEL' | translate }}(Esc)" (click)="onBtnCancel()">{{
-            'COMMON.CANCEL' | translate }}</button>
+        <button class="btn btn-secondary" title="{{ 'COMMON.CANCEL'  }}(Esc)" (click)="onBtnCancel()">{{
+            'COMMON.CANCEL'  }}</button>
     </ng-template>
 </p-dialog> -->
-<p-dialog [(visible)]="dialogRef.isDisplay"
-          (onShow)="onShow()"
-          [modal]="true"
-          [baseZIndex]="10000"
-          appendTo="body"
-          [style]=" {width: '60%'} "
-          [draggable]="true"
-          [maximizable]="true"
-          [closable]="false">
-    <form autocomplete="off"
-          #form="ngForm"
-          id="role-edit">
-        <p-table [value]="dataSource.items"
-                 selectionMode="multiple"
-                 [(selection)]="selectedActions"
-                 [metaKeySelection]="true"
-                 dataKey="id"
-                 [autoLayout]="true">
+<p-dialog [(visible)]="dialogRef.isDisplay" (onShow)="onShow()" [modal]="true" [baseZIndex]="10000" appendTo="body" [style]=" {width: '60%'} " [draggable]="true" [maximizable]="true" [closable]="false">
+    <form autocomplete="off" #form="ngForm" id="role-edit">
+        <p-table [value]="dataSource.items" selectionMode="multiple" [(selection)]="selectedActions" [metaKeySelection]="true" dataKey="id" [autoLayout]="true">
             <ng-template pTemplate="header">
                 <tr>
                     <th>No.</th>
@@ -39,47 +24,26 @@
                 </tr>
                 <tr>
                     <th></th>
-                    <th><span class="p-input-icon-right"
-                              style="width:100%">
+                    <th><span class="p-input-icon-right" style="width:100%">
                             <i class="pi pi-filter"></i>
-                            <input type="text"
-                                   pInputText
-                                   placeholder="Filter"
-                                   (keyup)="initData()"
-                                   name="tag"
-                                   style="padding-left: 0.7rem; width:100%"
-                                   [(ngModel)]="request.tag" />
+                            <input type="text" pInputText placeholder="Filter" (keyup)="initData()" name="tag"
+                                style="padding-left: 0.7rem; width:100%" [(ngModel)]="request.tag" />
                         </span></th>
-                    <th><span class="p-input-icon-right"
-                              style="width:100%">
+                    <th><span class="p-input-icon-right" style="width:100%">
 
                             <i class="pi pi-filter"></i>
-                            <input type="text"
-                                   pInputText
-                                   placeholder="Filter"
-                                   (keyup)="initData()"
-                                   name="routePath"
-                                   style="padding-left: 0.7rem;width:100%"
-                                   [(ngModel)]="request.routePath" />
+                            <input type="text" pInputText placeholder="Filter" (keyup)="initData()" name="routePath"
+                                style="padding-left: 0.7rem;width:100%" [(ngModel)]="request.routePath" />
                         </span></th>
-                    <th><span class="p-input-icon-right"
-                              style="width:100%">
+                    <th><span class="p-input-icon-right" style="width:100%">
                             <i class="pi pi-filter"></i>
-                            <input type="text"
-                                   pInputText
-                                   placeholder="Filter"
-                                   (keyup)="initData()"
-                                   name="method"
-                                   style="padding-left: 0.7rem;width:100%"
-                                   [(ngModel)]="request.method" />
+                            <input type="text" pInputText placeholder="Filter" (keyup)="initData()" name="method"
+                                style="padding-left: 0.7rem;width:100%" [(ngModel)]="request.method" />
                         </span></th>
                 </tr>
             </ng-template>
-            <ng-template pTemplate="body"
-                         let-action
-                         let-rowIndex="rowIndex">
-                <tr [pSelectableRow]="action"
-                    [pSelectableRowIndex]="rowIndex">
+            <ng-template pTemplate="body" let-action let-rowIndex="rowIndex">
+                <tr [pSelectableRow]="action" [pSelectableRowIndex]="rowIndex">
                     <td>{{ rowIndex + 1 }}</td>
                     <td>{{ action.tag }}</td>
                     <td>{{ action.routePath }}</td>
@@ -88,21 +52,13 @@
             </ng-template>
         </p-table>
     </form>
-    <mat-paginator [pageSize]="10"
-                   [pageSizeOptions]="[10, 30, 50]"
-                   [length]="dataSource.paginatorTotal"
-                   [showFirstLastButtons]="true"
-                   (page)="onPageChange($event)"></mat-paginator>
+    <mat-paginator [pageSize]="10" [pageSizeOptions]="[10, 30, 50]" [length]="dataSource.paginatorTotal" [showFirstLastButtons]="true" (page)="onPageChange($event)"></mat-paginator>
 
     <ng-template pTemplate="footer">
-        <button class="btn btn-primary"
-                title="{{ ('COMMON.SAVE') | translate }}(Enter)"
-                (click)="onBtnSave()">
-            {{ 'COMMON.SAVE' | translate }}
+        <button class="btn btn-primary" title="{{ ('COMMON.SAVE')  }}(Enter)" (click)="onBtnSave()">
+            {{ 'COMMON.SAVE' }}
         </button>
-        <button class="btn btn-secondary"
-                title="{{ 'COMMON.CANCEL' | translate }}(Esc)"
-                (click)="onBtnCancel()">{{
-            'COMMON.CANCEL' | translate }}</button>
+        <button class="btn btn-secondary" title="{{ 'COMMON.CANCEL'  }}(Esc)" (click)="onBtnCancel()">{{
+            'COMMON.CANCEL' }}</button>
     </ng-template>
 </p-dialog>
