--- a/my-coffee-venture/src/app/view/setting/permission/operation-and-data/operation-and-data.component.html
+++ b/my-coffee-venture/src/app/view/setting/permission/operation-and-data/operation-and-data.component.html
@@ -1,14 +1,21 @@
 <!-- <kt-portlet>
     <kt-portlet-header icon="fal fa-calendar-alt"
-                       [title]="'Quản lý tài nguyên' | translate"
+                       [title]="'Quản lý tài nguyên' "
                        [class]="'kt-portlet__head--lg'">
     </kt-portlet-header>
     <kt-portlet-body> [justify]="'start'"-->
+<div style="   height: 50vh;
+            min-height: 200px;
+            background-size: cover;
+            background-image: linear-gradient( 45deg, #efefef 25%, rgba(239, 239, 239, 0) 25%, rgba(239, 239, 239, 0) 75%, #efefef 75%, #efefef), linear-gradient( 45deg, #efefef 25%, rgba(239, 239, 239, 0) 25%, rgba(239, 239, 239, 0) 75%, #efefef 75%, #efefef);
+            background-position: center;">
+
+</div>
 <ul ngbNav (tabChange)="setParamsToRoute($event)" [(activeId)]="activeIdTab">
     <li [ngbNavItem]="tab.value" *ngFor="let tab of tabs" [id]="tab.value">
         <ng-template ngbNavLink>
             <span>
-                {{ tab.label | translate }} <b>
+                {{ tab.label }} <b>
                     <span [ngClass]="'badge badge-pill ' + tab.class" *ngIf="tab.count">{{ tab.count
                         }}</span></b>
             </span>
@@ -24,14 +31,14 @@
                 </div>
                 <div>
                     <button class="btn btn-sm btn-label btn-secondary" (click)="onBtnAddCLick()">
-                        <i class="fal fa-user-plus"></i> {{'COMMON.CRUD.ADD'| translate}}</button>
+                        <i class="fal fa-user-plus"></i> {{'COMMON.CRUD.ADD'}}</button>
                 </div>
             </div>
             <input type="checkbox" [(ngModel)]="isShowOnlyMenu" (change)="ngOnInit()"> Show only menu
             <p-tree [value]="treeData" selectionMode="single" [(selection)]="selectedItem" [metaKeySelection]="false" (onNodeSelect)="onNodeSelect($event.node)" (onNodeUnselect)="onNodeUnselect()" [contextMenu]="lcm" [draggableNodes]="true" [droppableNodes]="true"
                 draggableScope="self" droppableScope="self">
                 <ng-template let-node pTemplate="default">
-                    {{ node.label | translate }}
+                    {{ node.label }}
                 </ng-template>
             </p-tree>
         </div>
