--- a/my-coffee-venture/src/app/view/setting/permission/role/role-operation/role-operation.component.html
+++ b/my-coffee-venture/src/app/view/setting/permission/role/role-operation/role-operation.component.html
@@ -1,43 +1,26 @@
-<p-dialog #dlg
-            [modal]="true"
-          [(visible)]="dialogRef.isDisplay"
-          [baseZIndex]="11002"
-          [style]="{width: '750px'}"
-          [modal]="true"
-          [closable]="true"
-          appendTo="body"
-          (onHide)="dialogRef.visibilitySubject.next(false); currentStep = 0;">
+<div>
+    <a [ngClass]="dialogRef.input.styleClass" (click)="dialogRef.show()">{{ dialogRef.input.text }}</a>
+</div>
+
+<p-dialog #dlg [modal]="true" [(visible)]="dialogRef.isDisplay" [baseZIndex]="11002" [style]="{width: '750px'}" [modal]="true" [closable]="true" appendTo="body" (onHide)="dialogRef.visibilitySubject.next(false); currentStep = 0;">
     <p-header>
-        <i class="fal fa-users-cog"></i> {{ getHeader() | translate }}
+        <i class="fal fa-users-cog"></i> {{ getHeader() }}
     </p-header>
     <div *ngIf="currentStep === 0">
-        <p-tree [value]="treeData"
-                selectionMode="checkbox"
-                styleClass="p-treenode-non-highlighted"
-                [(selection)]="selectedItems"
-                (onNodeSelect)="isSelectedChanged = true"
-                (onNodeUnselect)="isSelectedChanged = true"
-                key="id">
-            <ng-template let-node
-                         pTemplate="default">
-                {{ node.label | translate }}
+        <p-tree [value]="treeData" selectionMode="checkbox" styleClass="p-treenode-non-highlighted" [(selection)]="selectedItems" (onNodeSelect)="isSelectedChanged = true" (onNodeUnselect)="isSelectedChanged = true" key="id">
+            <ng-template let-node pTemplate="default">
+                {{ node.label }}
             </ng-template>
         </p-tree>
     </div>
     <div *ngIf="currentStep === 1">
         <p-tree [value]="treeDataSelected">
-            <ng-template let-node
-                         pTemplate="default">
-                {{ node.label | translate }}
+            <ng-template let-node pTemplate="default">
+                {{ node.label }}
                 <!-- Show when advance mode is on and node is leaf -->
-                <a *ngIf="isAdvanceConfig && !node.children"
-                   (click)="onBtnCustomizeClick(node)"
-                   style="padding-left: 15px; color: red; text-decoration: underline;">Customize</a>
-                <a *ngIf="isAdvanceConfig && !node.children && node.data.isCustomized"
-                   (click)="onBtnResetClick(node)"
-                   style="padding-left: 15px; color: red; text-decoration: underline;">Reset</a>
-                <a *ngIf="!isAdvanceConfig && node.data.isCustomized"
-                   style="padding-left: 15px; color: red;">Customized</a>
+                <a *ngIf="isAdvanceConfig && !node.children" (click)="onBtnCustomizeClick(node)" style="padding-left: 15px; color: red; text-decoration: underline;">Customize</a>
+                <a *ngIf="isAdvanceConfig && !node.children && node.data.isCustomized" (click)="onBtnResetClick(node)" style="padding-left: 15px; color: red; text-decoration: underline;">Reset</a>
+                <a *ngIf="!isAdvanceConfig && node.data.isCustomized" style="padding-left: 15px; color: red;">Customized</a>
             </ng-template>
         </p-tree>
     </div>
@@ -45,24 +28,18 @@
     </div>
     <ng-template pTemplate="footer">
         <ng-container *ngIf="currentStep === 0">
-            <button class="btn btn-sm btn-secondary"
-                    (click)="onBtnSkipClick()">{{ 'COMMON.SKIP' | translate }}</button>
-            <button class="btn btn-sm btn-success"
-                    (click)="onBtnNextClick()">{{ 'COMMON.NEXT' | translate }}
+            <button class="btn btn-sm btn-secondary" (click)="onBtnSkipClick()">{{ 'COMMON.SKIP' }}</button>
+            <button class="btn btn-sm btn-success" (click)="onBtnNextClick()">{{ 'COMMON.NEXT' }}
                 <i class="fal fa-arrow-right"></i></button>
         </ng-container>
         <ng-container *ngIf="currentStep === 1">
-            <button class="btn btn-sm btn-secondary float-left"
-                    (click)="onBtnAdvanceConfigClick()">
-                {{ (isAdvanceConfig ? 'ROLE.HIDE_RESTRICT_CONFIG' : 'ROLE.RESTRICT_CONFIG') | translate }}</button>
-            <button class="btn btn-sm btn-secondary"
-                    (click)="onBtnBackClick()">{{ 'COMMON.BACK' | translate }}
+            <button class="btn btn-sm btn-secondary float-left" (click)="onBtnAdvanceConfigClick()">
+                {{ (isAdvanceConfig ? 'ROLE.HIDE_RESTRICT_CONFIG' : 'ROLE.RESTRICT_CONFIG') }}</button>
+            <button class="btn btn-sm btn-secondary" (click)="onBtnBackClick()">{{ 'COMMON.BACK' }}
                 <i class="fal fa-arrow-left"></i></button>
-            <button class="btn btn-sm btn-success"
-                    (click)="onBtnFinishClick()">{{ 'COMMON.FINISH' | translate }}</button>
+            <button class="btn btn-sm btn-success" (click)="onBtnFinishClick()">{{ 'COMMON.FINISH' }}</button>
         </ng-container>
     </ng-template>
 </p-dialog>
 
-<app-customize-resource [dialogRef]="customizeDialogRef"
-                        (performSet)="onPerformSet()"></app-customize-resource>
+<app-customize-resource [dialogRef]="customizeDialogRef" (performSet)="onPerformSet()"></app-customize-resource>
