--- a/my-coffee-venture/src/app/view/setting/permission/role/role.component.html
+++ b/my-coffee-venture/src/app/view/setting/permission/role/role.component.html
@@ -3,14 +3,13 @@
 
     <div class="row">
 
-        <div class="col-lg-4">
+        <div class="col-lg-4"><button class="btn btn-primary" color="primary" (click)="onBtnEditClick()" matTooltip="Create new User">{{
+                'COMMON.CRUD.ADD' }}</button>
             <!-- <kt-portlet>
-            <kt-portlet-header [title]="'COMMON.ROLE' | translate" [class]="'kt-portlet__head--lg'"
+            <kt-portlet-header [title]="'COMMON.ROLE' " [class]="'kt-portlet__head--lg'"
                 [viewLoading$]="roleService.isLoading$">
                 <ng-container ktPortletTools>
-                    <button class="btn btn-primary" color="primary" (click)="onBtnEditClick()"
-                        matTooltip="Create new User">{{
-                        'COMMON.CRUD.ADD' | translate }}</button>
+                    
                 </ng-container>
             </kt-portlet-header> -->
             <!-- 
@@ -32,7 +31,7 @@
                 <table class="table table-hover">
                     <thead>
                         <tr>
-                            <th *ngFor="let header of headers" [width]="header.width">{{ header.title | translate }}
+                            <th *ngFor="let header of headers" [width]="header.width">{{ header.title }}
                             </th>
                         </tr>
                     </thead>
@@ -50,7 +49,7 @@
         </div>
         <div class="col-lg-8">
             <!-- <kt-portlet>
-            <kt-portlet-header [title]="'COMMON.DETAILS' | translate" [class]="'kt-portlet__head--lg'"
+            <kt-portlet-header [title]="'COMMON.DETAILS' " [class]="'kt-portlet__head--lg'"
                 [viewLoading$]="roleService.isLoading$">
             </kt-portlet-header>
 
@@ -71,7 +70,5 @@
         </div>
     </div>
 </div>
-<!-- 
-<app-role-edit #dlgEdit [dialogRef]="dialogRef" (success)="onSuccess($event)"
-[userDialogRef]="userDialogRef">
-</app-role-edit> -->
+<app-role-edit #dlgEdit [dialogRef]="dialogRef" (success)="onSuccess($event)" [userDialogRef]="userDialogRef">
+</app-role-edit>
