--- a/my-coffee-venture/src/app/view/user/user.component.css
+++ b/my-coffee-venture/src/app/view/user/user.component.css
@@ -7,7 +7,7 @@
 }
 
 .mat-calendar-body-cell.selected {
-    background-color: black!important;
+    background-color: var(--hue-color-2)!important;
     border-radius: 50%
 }
 
