--- a/my-coffee-venture/src/app/view/user/user.component.html
+++ b/my-coffee-venture/src/app/view/user/user.component.html
@@ -1,4 +1,8 @@
-<div class="first">
+<div style="   height: 50vh;
+    min-height: 200px;
+    background-size: cover;
+    background-image: linear-gradient( 45deg, #efefef 25%, rgba(239, 239, 239, 0) 25%, rgba(239, 239, 239, 0) 75%, #efefef 75%, #efefef), linear-gradient( 45deg, #efefef 25%, rgba(239, 239, 239, 0) 25%, rgba(239, 239, 239, 0) 75%, #efefef 75%, #efefef);
+    background-position: center;">
 
 </div>
 <div class="container-fluid" style="margin-top:30px;width:100%;">
