--- a/my-coffee-venture/src/styles.css
+++ b/my-coffee-venture/src/styles.css
@@ -13,6 +13,10 @@
     --hue-color-5: rgb(128, 104, 84);
 }
 
+.p-menuitem.active {
+    background-color: orange;
+}
+
 * {
     box-sizing: inherit;
 }
